crates/sdk/tests/macros/error_init_not_named.stderr
error: (calimero)> method annotated with `#[app::init]` must be named `init`
  --> tests/macros/error_init_not_named.rs:11:12
   |
11 |     pub fn initialize() -> Self {
   |            ^^^^^^^^^^

error[E0277]: (calimero)> no method named `#[app::init]` found for type `MyState`
 --> tests/macros/error_init_not_named.rs:6:8
  |
6 | struct MyState;
  |        ^^^^^^^ add an `#[app::init]` method to this type
  |
  = help: the trait `AppStateInit` is not implemented for `MyState`
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`
